--- a/Mplus.Rmd
+++ b/Mplus.Rmd
@@ -319,8 +319,756 @@ Effects from TFL to TEF
     TFL                0.092      0.034      2.691      0.007
 ```
 
-#### DIAGRAM from Mplus
+#### DIAGRAM : Path Analysis
 </div>
 <div class="col-sm-10">
 <a href = "https://crumplab.github.io">
-![](images/PA.png)
+[](images/PA.png)
+
+
+
+## 2.Confirmatory Factor Analysis
+
+Reading assignment : Kulophas, D., Hallinger, P., Ruengtrakul, A., & Wongwanich, S. (2018). Exploring the effects of authentic leadership on academic optimism and teacher engagement in Thailand. International Journal of Educational Management, 32(1), 27-45. https://doi.org/10.1108/IJEM-10-2016-0233
+
+- Data in SPSS format [Download](https://github.com/trsamp/SEM101/blob/main/data/03SEM.sav)
+
+```
+TITLE:  CFA model
+
+DATA:
+  FILE IS data_al.txt;
+  TYPE IS CORRELATION MEANS STD; 
+  NOBSERVATIONS = 605; 
+VARIABLE:
+  NAMES ARE SA RT BP IMP AO WE;
+  USEVARIABLES ARE SA RT BP IMP ;
+
+MODEL:
+  AL BY SA RT BP IMP;
+
+OUTPUT:  SAMPSTAT STDYX Mod TECH4;
+```
+#### Printout
+
+```
+CFA model
+
+SUMMARY OF ANALYSIS
+
+Number of groups                                                 1
+Number of observations                                         605
+
+Number of dependent variables                                    4
+Number of independent variables                                  0
+Number of continuous latent variables                            1
+
+Observed dependent variables
+
+  Continuous
+   SA          RT          BP          IMP
+
+Continuous latent variables
+   AL
+
+
+Estimator                                                       ML
+Information matrix                                        EXPECTED
+Maximum number of iterations                                  1000
+Convergence criterion                                    0.500D-04
+Maximum number of steepest descent iterations                   20
+
+Input data file(s)
+  data_al.txt
+
+Input data format  FREE
+
+
+SAMPLE STATISTICS
+
+
+     SAMPLE STATISTICS
+
+
+           Means/Intercepts/Thresholds
+              SA            RT            BP            IMP
+              ________      ________      ________      ________
+                2.708         1.543         2.373         1.473
+
+
+           Covariances/Correlations/Residual Correlations
+              SA            RT            BP            IMP
+              ________      ________      ________      ________
+ SA             0.396
+ RT             0.184         0.116
+ BP             0.308         0.168         0.314
+ IMP            0.163         0.093         0.152         0.101
+
+
+THE MODEL ESTIMATION TERMINATED NORMALLY
+
+
+
+MODEL FIT INFORMATION
+
+Number of Free Parameters                       12
+
+Loglikelihood
+
+          H0 Value                         -65.721
+          H1 Value                         -62.423
+
+Information Criteria
+
+          Akaike (AIC)                     155.443
+          Bayesian (BIC)                   208.305
+          Sample-Size Adjusted BIC         170.208
+            (n* = (n + 2) / 24)
+
+Chi-Square Test of Model Fit
+
+          Value                              6.596
+          Degrees of Freedom                     2
+          P-Value                           0.0370
+
+RMSEA (Root Mean Square Error Of Approximation)
+
+          Estimate                           0.062
+          90 Percent C.I.                    0.013  0.117
+          Probability RMSEA <= .05           0.280
+
+CFI/TLI
+
+          CFI                                0.998
+          TLI                                0.995
+
+Chi-Square Test of Model Fit for the Baseline Model
+
+          Value                           2788.139
+          Degrees of Freedom                     6
+          P-Value                           0.0000
+
+SRMR (Standardized Root Mean Square Residual)
+
+          Value                              0.004
+
+
+
+MODEL RESULTS
+
+                                                    Two-Tailed
+                    Estimate       S.E.  Est./S.E.    P-Value
+
+ AL       BY
+    SA                 1.000      0.000    999.000    999.000
+    RT                 0.554      0.013     41.403      0.000
+    BP                 0.918      0.022     42.514      0.000
+    IMP                0.497      0.014     36.824      0.000
+
+ Intercepts
+    SA                 2.708      0.026    105.983      0.000
+    RT                 1.543      0.014    111.391      0.000
+    BP                 2.373      0.023    104.315      0.000
+    IMP                1.473      0.013    114.028      0.000
+
+ Variances
+    AL                 0.332      0.023     14.687      0.000
+
+ Residual Variances
+    SA                 0.063      0.005     13.595      0.000
+    RT                 0.014      0.001     12.085      0.000
+    BP                 0.033      0.003     11.259      0.000
+    IMP                0.019      0.001     14.283      0.000
+
+
+STANDARDIZED MODEL RESULTS
+
+
+STDYX Standardization
+
+                                                    Two-Tailed
+                    Estimate       S.E.  Est./S.E.    P-Value
+
+ AL       BY
+    SA                 0.917      0.008    120.416      0.000
+    RT                 0.938      0.006    150.146      0.000
+    BP                 0.945      0.006    164.281      0.000
+    IMP                0.902      0.009    104.260      0.000
+
+ Intercepts
+    SA                 4.309      0.130     33.050      0.000
+    RT                 4.529      0.136     33.204      0.000
+    BP                 4.241      0.129     32.999      0.000
+    IMP                4.636      0.139     33.271      0.000
+
+ Variances
+    AL                 1.000      0.000    999.000    999.000
+
+ Residual Variances
+    SA                 0.159      0.014     11.424      0.000
+    RT                 0.121      0.012     10.340      0.000
+    BP                 0.106      0.011      9.763      0.000
+    IMP                0.187      0.016     11.976      0.000
+
+
+R-SQUARE
+
+    Observed                                        Two-Tailed
+    Variable        Estimate       S.E.  Est./S.E.    P-Value
+
+    SA                 0.841      0.014     60.208      0.000
+    RT                 0.879      0.012     75.073      0.000
+    BP                 0.894      0.011     82.140      0.000
+    IMP                0.813      0.016     52.130      0.000
+
+
+QUALITY OF NUMERICAL RESULTS
+
+     Condition Number for the Information Matrix              0.125E-02
+       (ratio of smallest to largest eigenvalue)
+
+
+MODEL MODIFICATION INDICES
+
+NOTE:  Modification indices for direct effects of observed dependent variables
+regressed on covariates may not be included.  To include these, request
+MODINDICES (ALL).
+
+Minimum M.I. value for printing the modification index    10.000
+
+                                   M.I.     E.P.C.  Std E.P.C.  StdYX E.P.C.
+
+No modification indices above the minimum value.
+
+
+
+TECHNICAL 4 OUTPUT
+
+
+     ESTIMATES DERIVED FROM THE MODEL
+
+
+           ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL
+              ________
+                0.000
+
+
+           ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL             0.332
+
+
+           ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL             1.000
+
+
+     ESTIMATES DERIVED FROM THE MODEL
+
+
+           S.E. FOR ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL
+              ________
+                0.000
+
+
+           EST./S.E. FOR ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL
+              ________
+                0.000
+
+
+           TWO-TAILED P-VALUE FOR ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL
+              ________
+                1.000
+
+
+           S.E. FOR ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL             0.023
+
+
+           EST./S.E. FOR ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL            14.687
+
+
+           TWO-TAILED P-VALUE FOR ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL             0.000
+
+
+           S.E. FOR ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL             0.000
+
+
+           EST./S.E. FOR ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL           999.000
+
+
+           TWO-TAILED P-VALUE FOR ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL
+              ________
+ AL             0.000
+
+```
+
+#### DIAGRAM : CFA
+</div>
+<div class="col-sm-10">
+<a href = "https://crumplab.github.io">
+[](images/CFA.png)
+
+
+## 3.Structural Equation Modeling
+
+Reading assignment : Kulophas, D., Hallinger, P., Ruengtrakul, A., & Wongwanich, S. (2018). Exploring the effects of authentic leadership on academic optimism and teacher engagement in Thailand. International Journal of Educational Management, 32(1), 27-45. https://doi.org/10.1108/IJEM-10-2016-0233
+
+- Data in SPSS format [Download](https://github.com/trsamp/SEM101/blob/main/data/03SEM.sav)
+
+```
+TITLE:  authentic leadership model
+
+DATA:
+  FILE IS data_al.txt;
+  TYPE IS CORRELATION MEANS STD; 
+  NOBSERVATIONS = 605; 
+VARIABLE:
+  NAMES ARE SA RT BP IMP AO WE;
+  USEVARIABLES ARE SA RT BP IMP AO WE;
+
+MODEL:
+  AL BY SA RT BP IMP;
+  fAO BY AO;  AO@.005;
+  fWE BY WE;  WE@.011;
+  fWE ON fAO AL;
+  fAO ON AL;
+  BP WITH SA;
+ 
+ MODEL indirect:
+ fWE IND AL;
+  OUTPUT:  SAMPSTAT STDYX Mod TECH4;
+```
+#### PRINTOUT
+
+```
+authentic leadership model
+
+SUMMARY OF ANALYSIS
+
+Number of groups                                                 1
+Number of observations                                         605
+
+Number of dependent variables                                    6
+Number of independent variables                                  0
+Number of continuous latent variables                            3
+
+Observed dependent variables
+
+  Continuous
+   SA          RT          BP          IMP         AO          WE
+
+Continuous latent variables
+   AL          FAO         FWE
+
+
+Estimator                                                       ML
+Information matrix                                        EXPECTED
+Maximum number of iterations                                  1000
+Convergence criterion                                    0.500D-04
+Maximum number of steepest descent iterations                   20
+
+Input data file(s)
+  data_al.txt
+
+Input data format  FREE
+
+
+SAMPLE STATISTICS
+
+
+     SAMPLE STATISTICS
+
+
+           Means/Intercepts/Thresholds
+              SA            RT            BP            IMP           AO
+              ________      ________      ________      ________      ________
+                2.708         1.543         2.373         1.473         3.024
+
+
+           Means/Intercepts/Thresholds
+              WE
+              ________
+                2.588
+
+
+           Covariances/Correlations/Residual Correlations
+              SA            RT            BP            IMP           AO
+              ________      ________      ________      ________      ________
+ SA             0.396
+ RT             0.184         0.116
+ BP             0.308         0.168         0.314
+ IMP            0.163         0.093         0.152         0.101
+ AO             0.050         0.031         0.047         0.027         0.081
+ WE             0.068         0.036         0.056         0.034         0.052
+
+
+           Covariances/Correlations/Residual Correlations
+              WE
+              ________
+ WE             0.085
+
+
+THE MODEL ESTIMATION TERMINATED NORMALLY
+
+
+
+MODEL FIT INFORMATION
+
+Number of Free Parameters                       20
+
+Loglikelihood
+
+          H0 Value                         -68.414
+          H1 Value                         -62.254
+
+Information Criteria
+
+          Akaike (AIC)                     176.827
+          Bayesian (BIC)                   264.932
+          Sample-Size Adjusted BIC         201.437
+            (n* = (n + 2) / 24)
+
+Chi-Square Test of Model Fit
+
+          Value                             12.320
+          Degrees of Freedom                     7
+          P-Value                           0.0905
+
+RMSEA (Root Mean Square Error Of Approximation)
+
+          Estimate                           0.035
+          90 Percent C.I.                    0.000  0.067
+          Probability RMSEA <= .05           0.739
+
+CFI/TLI
+
+          CFI                                0.998
+          TLI                                0.996
+
+Chi-Square Test of Model Fit for the Baseline Model
+
+          Value                           3203.520
+          Degrees of Freedom                    15
+          P-Value                           0.0000
+
+SRMR (Standardized Root Mean Square Residual)
+
+          Value                              0.007
+
+
+
+MODEL RESULTS
+
+                                                    Two-Tailed
+                    Estimate       S.E.  Est./S.E.    P-Value
+
+ AL       BY
+    SA                 1.000      0.000    999.000    999.000
+    RT                 0.564      0.014     39.206      0.000
+    BP                 0.919      0.021     43.243      0.000
+    IMP                0.505      0.014     35.483      0.000
+
+ FAO      BY
+    AO                 1.000      0.000    999.000    999.000
+
+ FWE      BY
+    WE                 1.000      0.000    999.000    999.000
+
+ FWE      ON
+    FAO                0.619      0.036     17.203      0.000
+    AL                 0.097      0.017      5.613      0.000
+
+ FAO      ON
+    AL                 0.162      0.020      8.200      0.000
+
+ BP       WITH
+    SA                 0.008      0.004      2.283      0.022
+
+ Intercepts
+    SA                 2.708      0.026    105.983      0.000
+    RT                 1.543      0.014    111.391      0.000
+    BP                 2.373      0.023    104.315      0.000
+    IMP                1.473      0.013    114.028      0.000
+    AO                 3.024      0.012    262.120      0.000
+    WE                 2.588      0.012    218.931      0.000
+
+ Variances
+    AL                 0.325      0.023     14.309      0.000
+
+ Residual Variances
+    SA                 0.070      0.006     12.233      0.000
+    RT                 0.013      0.001     10.154      0.000
+    BP                 0.039      0.004     10.400      0.000
+    IMP                0.018      0.001     13.648      0.000
+    AO                 0.005      0.000    999.000    999.000
+    WE                 0.011      0.000    999.000    999.000
+    FAO                0.067      0.004     16.100      0.000
+    FWE                0.035      0.003     12.699      0.000
+
+
+STANDARDIZED MODEL RESULTS
+
+
+STDYX Standardization
+
+                                                    Two-Tailed
+                    Estimate       S.E.  Est./S.E.    P-Value
+
+ AL       BY
+    SA                 0.907      0.009     99.014      0.000
+    RT                 0.944      0.006    146.712      0.000
+    BP                 0.936      0.007    130.828      0.000
+    IMP                0.906      0.009    105.787      0.000
+
+ FAO      BY
+    AO                 0.968      0.002    525.412      0.000
+
+ FWE      BY
+    WE                 0.933      0.004    232.557      0.000
+
+ FWE      ON
+    FAO                0.627      0.030     20.874      0.000
+    AL                 0.203      0.036      5.689      0.000
+
+ FAO      ON
+    AL                 0.337      0.038      8.805      0.000
+
+ BP       WITH
+    SA                 0.161      0.062      2.585      0.010
+
+ Intercepts
+    SA                 4.309      0.130     33.050      0.000
+    RT                 4.529      0.136     33.204      0.000
+    BP                 4.241      0.129     32.999      0.000
+    IMP                4.636      0.139     33.271      0.000
+    AO                10.657      0.309     34.483      0.000
+    WE                 8.901      0.259     34.354      0.000
+
+ Variances
+    AL                 1.000      0.000    999.000    999.000
+
+ Residual Variances
+    SA                 0.177      0.017     10.649      0.000
+    RT                 0.110      0.012      9.024      0.000
+    BP                 0.124      0.013      9.231      0.000
+    IMP                0.179      0.016     11.556      0.000
+    AO                 0.062      0.004     17.393      0.000
+    WE                 0.130      0.007     17.393      0.000
+    FAO                0.886      0.026     34.353      0.000
+    FWE                0.480      0.034     13.990      0.000
+
+
+R-SQUARE
+
+    Observed                                        Two-Tailed
+    Variable        Estimate       S.E.  Est./S.E.    P-Value
+
+    SA                 0.823      0.017     49.507      0.000
+    RT                 0.890      0.012     73.356      0.000
+    BP                 0.876      0.013     65.414      0.000
+    IMP                0.821      0.016     52.893      0.000
+    AO                 0.938      0.004    262.706      0.000
+    WE                 0.870      0.007    116.279      0.000
+
+     Latent                                         Two-Tailed
+    Variable        Estimate       S.E.  Est./S.E.    P-Value
+
+    FAO                0.114      0.026      4.402      0.000
+    FWE                0.520      0.034     15.154      0.000
+
+
+QUALITY OF NUMERICAL RESULTS
+
+     Condition Number for the Information Matrix              0.871E-03
+       (ratio of smallest to largest eigenvalue)
+
+
+TOTAL, TOTAL INDIRECT, SPECIFIC INDIRECT, AND DIRECT EFFECTS
+
+
+                                                    Two-Tailed
+                    Estimate       S.E.  Est./S.E.    P-Value
+
+Effects from AL to FWE
+
+  Total                0.197      0.020      9.888      0.000
+  Total indirect       0.100      0.014      7.431      0.000
+
+  Specific indirect
+
+    FWE
+    FAO
+    AL                 0.100      0.014      7.431      0.000
+
+  Direct
+    FWE
+    AL                 0.097      0.017      5.613      0.000
+
+
+
+STANDARDIZED TOTAL, TOTAL INDIRECT, SPECIFIC INDIRECT, AND DIRECT EFFECTS
+
+
+STDYX Standardization
+
+                                                    Two-Tailed
+                    Estimate       S.E.  Est./S.E.    P-Value
+
+Effects from AL to FWE
+
+  Total                0.414      0.038     11.025      0.000
+  Total indirect       0.211      0.026      8.164      0.000
+
+  Specific indirect
+
+    FWE
+    FAO
+    AL                 0.211      0.026      8.164      0.000
+
+  Direct
+    FWE
+    AL                 0.203      0.036      5.689      0.000
+
+
+
+
+MODEL MODIFICATION INDICES
+
+NOTE:  Modification indices for direct effects of observed dependent variables
+regressed on covariates may not be included.  To include these, request
+MODINDICES (ALL).
+
+Minimum M.I. value for printing the modification index    10.000
+
+                                   M.I.     E.P.C.  Std E.P.C.  StdYX E.P.C.
+
+No modification indices above the minimum value.
+
+
+
+TECHNICAL 4 OUTPUT
+
+
+     ESTIMATES DERIVED FROM THE MODEL
+
+
+           ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+                0.000         0.000         0.000
+
+
+           ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL             0.325
+ FAO            0.053         0.076
+ FWE            0.064         0.052         0.074
+
+
+           ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL             1.000
+ FAO            0.337         1.000
+ FWE            0.414         0.695         1.000
+
+
+     ESTIMATES DERIVED FROM THE MODEL
+
+
+           S.E. FOR ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+                0.000         0.000         0.000
+
+
+           EST./S.E. FOR ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+                0.000         0.000         0.000
+
+
+           TWO-TAILED P-VALUE FOR ESTIMATED MEANS FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+                1.000         1.000         1.000
+
+
+           S.E. FOR ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL             0.023
+ FAO            0.007         0.005
+ FWE            0.007         0.004         0.005
+
+
+           EST./S.E. FOR ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL            14.309
+ FAO            7.420        16.313
+ FWE            8.601        13.081        15.130
+
+
+           TWO-TAILED P-VALUE FOR ESTIMATED COVARIANCE MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL             0.000
+ FAO            0.000         0.000
+ FWE            0.000         0.000         0.000
+
+
+           S.E. FOR ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL             0.000
+ FAO            0.038         0.000
+ FWE            0.038         0.026         0.000
+
+
+           EST./S.E. FOR ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL           999.000
+ FAO            8.805       999.000
+ FWE           11.025        27.219       999.000
+
+
+           TWO-TAILED P-VALUE FOR ESTIMATED CORRELATION MATRIX FOR THE LATENT VARIABLES
+              AL            FAO           FWE
+              ________      ________      ________
+ AL             0.000
+ FAO            0.000         0.000
+ FWE            0.000         0.000         0.000
+
+```
+
+
+#### DIAGRAM : SEM
+</div>
+<div class="col-sm-10">
+<a href = "https://crumplab.github.io">
+[](images/CFA.png)
